# arithmo

./: README.md  meson.build
include/: lexer.h
src/: lexer.c  main.c
tests/: test_lexer.c
